--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openfl",
-  "version": "6.5.3-alpha.8",
+  "version": "7.0.0-beta",
   "description": "A fast, productive library for 2D cross-platform development.",
   "keywords": [
     "openfl",
