Update NPM version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openfl",
-  "version": "7.0.0-beta",
+  "version": "7.0.0-beta.2",
   "description": "A fast, productive library for 2D cross-platform development.",
   "keywords": [
     "openfl",
