--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "docker-test-es5": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run test-es5 -s\"",
     "docker-test-es6": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run test-es6 -s\"",
     "docker-test-haxe": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run test-haxe -s\"",
-    "docker-test-typescript": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run test-typescript -s\""
+    "docker-test-typescript": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run test-typescript -s\"",
+    "watch": "watch 'npm run build-lib -s' ./src ./node_modules/lime/lime"
   },
   "config": {
     "haxe": "3.4.4"
@@ -77,6 +78,7 @@
     "mocha-chrome": "^1.0.2",
     "typescript": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.1.4",
+    "watch": "^1.0.2",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.1"
   },
