Add a few commands

--- a/package.json
+++ b/package.json
@@ -39,13 +39,16 @@
   },
   "scripts": {
     "build": "npm run build-lib && npm run build-dist && npm run build-tools",
-    "build-dist": "webpack --config webpack.dev.js && webpack --config webpack.prod.js",
+    "build-dist": "npm run build-dist:dev && npm run build-dist:prod",
+    "build-dist:dev": "webpack --config webpack.dev.js",
+    "build-dist:prod": "webpack --config webpack.prod.js",
     "build-lib": "cd scripts && haxe build.hxml",
     "build-tools": "cd scripts && haxe tools-npm.hxml",
     "build-test-es5": "cd test/es5 && webpack",
     "build-test-es6": "cd test/es6 && webpack",
     "build-test-haxe": "cd test/haxe && haxe build.hxml && webpack",
     "build-test-typescript": "cd test/typescript && tsc -p tsconfig.json && webpack",
+    "dev-link": "npm link lime && npm link hxgenjs && npm link hxnodejs && npm link format",
     "prepublishOnly": "npm run build",
     "serve": "http-server -c-1 --cors",
     "test": "npm run build-test-es5 && npm run build-test-es6 && npm run build-test-haxe && npm run build-test-typescript && mocha-chrome test/index.html --old-and-busted",
