--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "docker-test-haxe": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run test-haxe -s\"",
     "docker-test-typescript": "cd scripts && node docker-run.js openfl/ci-openfl-js:0.0.2 \"npm run test-typescript -s\"",
     "start": "npm run watch",
-    "watch": "watch 'echo \"watch: Compiling...\" && npm run build-lib -s && echo \"watch: Compiled successfully.\"' ./src ./scripts ./node_modules/lime/lime"
+    "watch": "watch \"echo watch: Compiling... && npm run build-lib -s && echo watch: Compiled successfully.\" ./src ./scripts ./node_modules/lime/lime"
   },
   "config": {
     "haxe": "3.4.4",
