--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "haxelib_version": "3.2.0-rc.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.99",
     "@types/mocha": "^2.2.46",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -91,7 +92,7 @@
     "mocha": "^4.0.1",
     "mocha-chrome": "^1.0.2",
     "typedoc": "^0.9.0",
-    "typescript": "^2.6.2",
+    "typescript": "^2.7.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "watch": "^1.0.2",
     "webpack": "^3.10.0",
