--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,8 @@ jobs:
   Neko (Haxe 3.2.1):
     docker:
      - image: openfl/openfl-tests-unit-3.2:0.0.3
+    environment:
+     - DISPLAY: ":0"
     working_directory: /workspace/openfl/test/unit
     steps:
      - attach_workspace:
@@ -119,6 +121,8 @@ jobs:
   Neko (Haxe 3.4.x):
     docker:
      - image: openfl/openfl-tests-unit-3.4:0.0.4
+    environment:
+     - DISPLAY: ":0"
     working_directory: /workspace/openfl/test/unit
     steps:
      - attach_workspace:
@@ -140,6 +144,8 @@ jobs:
   C++ (Haxe 3.2.1):
     docker:
      - image: openfl/openfl-tests-unit-3.2:0.0.3
+    environment:
+     - DISPLAY: ":0"
     working_directory: /workspace/openfl/test/unit
     steps:
      - attach_workspace:
@@ -160,6 +166,8 @@ jobs:
   C++ (Haxe 3.4.x):
     docker:
      - image: openfl/openfl-tests-unit-3.4:0.0.4
+    environment:
+     - DISPLAY: ":0"
     working_directory: /workspace/openfl/test/unit
     steps:
      - attach_workspace:
