--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "file-saverjs": "^1.3.6",
     "howler": "^2.0.6",
     "pako": "^1.0.6"
   }
