--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "bin": {
     "openfljs": "bin/openfl.js"
   },
-  "module": "lib/openfl/index.js",
+  "module": "lib/openfl/index.esm.js",
+  "types": "lib/openfl/index.d.ts",
+  "sideEffects": false,
   "files": [
     "bin",
     "dist",
@@ -44,7 +46,7 @@
     "build-dist:dev": "webpack --config webpack.dev.js",
     "build-dist:prod": "webpack --config webpack.prod.js",
     "build-docs": "typedoc --out docs scripts/importAll.ts --allowJs --entryPoint openfl --mode file --target es5 --module commonjs --plugins none --exclude \"**/{node_modules,test}/**/*.ts\" --readme none --theme default --includeDeclarations --disableOutputCheck --ignoreCompilerErrors",
-    "build-lib": "cd scripts && haxe build.hxml",
+    "build-lib": "cd scripts && haxe build.hxml && node convert-to-es2015 && node convert-barrels-to-es2015",
     "build-tools": "cd scripts && haxe tools-npm.hxml",
     "build-test-es5": "cd test/es5 && webpack",
     "build-test-es6": "cd test/es6 && webpack",
@@ -85,6 +87,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "chai": "^4.1.2",
     "format": "jgranick/format",
+    "globby": "^8.0.1",
     "haxe": "4.1.0",
     "hxgenjs": "kevinresol/hxgenjs",
     "hxnodejs": "jgranick/hxnodejs",
