--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "module": "lib_esm/openfl/index.js",
   "types": "lib/openfl/index.d.ts",
-  "sideEffects": false,
+  "sideEffects": ["./lib_esm/openfl/utils/AssetLibrary.js"],
   "files": [
     "bin",
     "dist",
