--- a/scripts/asconfig.json
+++ b/scripts/asconfig.json
@@ -1,9 +1,8 @@
 {
-	"config": "js",
 	"type": "lib",
 	"compilerOptions": {
-		"targets": [
-			"JS"
+		"load-config": [
+			"royale-patch.xml"
 		],
 		"keep-as3-metadata": [
 			"JSModule"
