--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "build-dist:prod": "webpack --config webpack.prod.js",
     "build-docs": "typedoc --out docs scripts/importAll.ts --allowJs --entryPoint openfl --mode file --target es5 --module commonjs --plugins none --exclude \"**/{node_modules,test}/**/*.ts\" --readme none --theme default --includeDeclarations --disableOutputCheck --ignoreCompilerErrors",
     "build-lib": "cd scripts && haxe build.hxml",
-    "build-swc": "cd scripts && asconfigc --sdk ../node_modules/@apache-royale/royale-js-swf",
+    "build-swc": "compc -load-config=node_modules/@apache-royale/royale-js/royale-asjs/frameworks/js-config.xml -keep-as3-metadata=JSModule -include-sources=lib -compiler.targets=SWF -output=dist/openfl.swc",
     "build-tools": "cd scripts && haxe tools-npm.hxml",
     "build-test-es5": "cd test/es5 && webpack",
     "build-test-es6": "cd test/es6 && webpack",
@@ -79,7 +79,7 @@
     "haxelib_version": "3.2.0-rc.3"
   },
   "devDependencies": {
-    "@apache-royale/royale-js-swf": "^0.9.3",
+    "@apache-royale/royale-js": "^0.9.3",
     "@types/lodash": "^4.14.99",
     "@types/mocha": "^2.2.46",
     "asconfigc": "^0.6.9",
@@ -102,7 +102,6 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
-    "@apache-royale/royale-js": "^0.9.1",
     "file-saverjs": "^1.3.6",
     "howler": "^2.0.6",
     "pako": "^1.0.6"
