--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,7 +247,7 @@ jobs:
      - checkout
      - run:
          name: Install Dependencies
-         command: yes | npm install
+         command: npm install
      - run:
          name: Build Library
          command: npm run build
