--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
-    "file-saverjs": "^1.3.6",
+    "file-saver": "^1.3.8",
     "howler": "^2.0.6",
     "pako": "^1.0.6"
   }
