--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-stage-1": "^6.24.1",
+    "brotli-webpack-plugin": "^1.0.0",
     "chai": "^4.1.2",
+    "compression-webpack-plugin": "^1.1.11",
     "format": "jgranick/format",
     "haxe": "4.1.0",
     "hxgenjs": "kevinresol/hxgenjs",
