--- a/package.json
+++ b/package.json
@@ -79,38 +79,38 @@
     "start": "npm run watch",
     "watch": "watch \"echo watch: Compiling... && npm run build-lib -s && echo watch: Compiled successfully.\" ./src ./scripts ./node_modules/lime/lime"
   },
-  "config": {
-    "haxe": "3.4.4",
-    "haxelib_version": "3.2.0-rc.3"
-  },
   "devDependencies": {
     "@apache-royale/royale-js": "^0.9.3",
-    "@types/lodash": "^4.14.99",
-    "@types/mocha": "^2.2.46",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "@types/lodash": "^4.14.109",
+    "@types/mocha": "^5.2.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-preset-stage-1": "^6.24.1",
     "brotli-webpack-plugin": "^1.0.0",
     "chai": "^4.1.2",
     "compression-webpack-plugin": "^1.1.11",
     "format": "jgranick/format",
     "globby": "^8.0.1",
-    "haxe": "4.1.0",
+    "haxe": "5.0.9",
     "hxgenjs": "kevinresol/hxgenjs",
     "hxnodejs": "jgranick/hxnodejs",
     "lime": "openfl/lime#develop",
-    "mocha": "^4.0.1",
-    "mocha-chrome": "^1.0.2",
-    "typedoc": "^0.9.0",
-    "typescript": "^2.7.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
+    "mocha": "^5.2.0",
+    "mocha-chrome": "^1.1.0",
+    "typedoc": "^0.11.1",
+    "typescript": "^2.8.3",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "watch": "^1.0.2",
-    "webpack": "^3.10.0",
-    "webpack-merge": "^4.1.1"
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
     "file-saver": "^1.3.8",
     "howler": "^2.0.6",
     "pako": "^1.0.6"
+  },
+  "haxeDependencies": {
+    "haxe": "3.4.4"
   }
 }
