Added initial es6 module circular dependency detection

--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "build-dist:prod": "webpack --config webpack.prod.js",
     "build-docs": "typedoc --out docs scripts/importAll.ts --allowJs --entryPoint openfl --mode file --target es5 --module commonjs --plugins none --exclude \"**/{node_modules,test}/**/*.ts\" --readme none --theme default --includeDeclarations --disableOutputCheck --ignoreCompilerErrors",
     "build-lib": "cd scripts && haxe build.hxml",
-    "build-lib-esm": "cd scripts && node generate-es2015 all",
+    "build-lib-esm": "cd scripts && node generate-es2015 gen",
+    "build-lib-esm-reexports-barrels": "cd scripts && node generate-es2015 non-gen",
     "build-swc": "compc -load-config=node_modules/@apache-royale/royale-js/royale-asjs/frameworks/js-config.xml -keep-as3-metadata=JSModule -include-sources=lib -compiler.targets=SWF -output=dist/openfl.swc",
     "build-tools": "cd scripts && haxe tools-npm.hxml",
     "build-test-es5": "cd test/es5 && webpack",
