--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -237,6 +237,13 @@ jobs:
      - run:
          name: Generate Documentation
          command: haxe docs.hxml
+         name: Deploy
+         command: |
+            if [ "${CIRCLE_BRANCH}" == "develop" ]; then
+              aws s3 sync ../docs-api s3://api.openfl.org --acl bucket-owner-full-control --acl public-read --size-only --delete --include="*" --cache-control max-age=864000
+            else
+              echo "Not on master (skipping step)"
+            fi
   
   
   NPM:
