--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ commands:
          command: cp /workspace/lime/templates/bin/lime.sh /usr/local/bin/lime && chmod 755 /usr/local/bin/lime
      - run:
          name: Rebuild OpenFL Tools
-         command: haxelib run openfl rebuild tools -nocffi
+         command: openfl rebuild tools -nocffi
      - run:
          name: Generate MUnit Test Runner
          working_directory: /workspace/openfl/test/haxelib
@@ -68,32 +68,32 @@ commands:
     steps:
      - run:
          name: Rebuild HXCPP static libraries
-         command: haxelib run lime rebuild hxcpp linux -static -release -64 -nocffi
+         command: lime rebuild hxcpp linux -static -release -64 -nocffi
      - run:
          name: Rebuild Lime Desktop Binary
-         command: haxelib run lime rebuild linux -release -64 -nocffi
+         command: lime rebuild linux -release -64 -nocffi
      - run:
          name: Run Tests (CFFI-enabled)
          working_directory: /workspace/openfl/test/haxelib
-         command: haxelib run lime build neko -nocffi
+         command: lime build neko -nocffi
      - run:
          name: Run Tests (CFFI-disabled)
          working_directory: /workspace/openfl/test/haxelib
-         command: haxelib run lime build neko -Ddisable-cffi -nocffi
+         command: lime build neko -Ddisable-cffi -nocffi
 
   test-cpp:
     description: "Test C++"
     steps:
      - run:
          name: Rebuild HXCPP static libraries
-         command: haxelib run lime rebuild hxcpp linux -static -release -64 -nocffi
+         command: lime rebuild hxcpp linux -static -release -64 -nocffi
      - run:
          name: Rebuild Lime Desktop Binary
-         command: haxelib run lime rebuild linux -release -64 -nocffi
+         command: lime rebuild linux -release -64 -nocffi
      - run:
          name: Run Tests
          working_directory: /workspace/openfl/test/haxelib
-         command: haxelib run lime test linux --window-hardware=false
+         command: lime test linux --window-hardware=false
 
   test-flash:
     description: "Test Flash"
@@ -101,7 +101,7 @@ commands:
      - run:
          name: Build Tests
          working_directory: /workspace/openfl/test/haxelib
-         command: haxelib run lime build flash -nocffi
+         command: lime build flash -nocffi
      - run:
          name: Run Tests
          working_directory: /workspace/openfl/test/haxelib
