--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,10 +131,10 @@ commands:
      - run:
          name: Deploy
          command: |
-            if [ "${CIRCLE_BRANCH}" == "develop" ]; then
+            if [ "${CIRCLE_BRANCH}" == "develop" ] && [[ !-z "$AWS_SECRET_ACCESS_KEY" ]]; then
               aws s3 sync docs-api s3://api.openfl.org --acl bucket-owner-full-control --acl public-read --size-only --delete --include="*" --cache-control max-age=864000
             else
-              echo "Not on master (skipping step)"
+              echo "Skipping step"
             fi
 
   test-npm:
