--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,7 +131,7 @@ commands:
      - run:
          name: Deploy
          command: |
-            if [[ "${CIRCLE_BRANCH}" == "develop" ]] && [[ !-z "$AWS_SECRET_ACCESS_KEY" ]]; then
+            if [ "${CIRCLE_BRANCH}" == "develop" ] && [[ ! -z "$AWS_SECRET_ACCESS_KEY" ]]; then
               aws s3 sync docs-api s3://api.openfl.org --acl bucket-owner-full-control --acl public-read --size-only --delete --include="*" --cache-control max-age=864000
             else
               echo "Skipping step"
